switch stylesheet to scss, fix missing background image on deployment, refactor application.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,8 +3,7 @@ body{
 }
 .fb-header-base{
 	width:100%;
-	height:90px;
-	/* change to 80px across the board */
+	height:80px;
 	position:absolute;
 	top:0;
 	left:0;
@@ -13,18 +12,15 @@ body{
 	font-family:verdana;
 	border-bottom: 1px solid #133783
 	/* -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, .25); */
-
 }
 .fb-header{
 	width:100%;
-	height:90px;
+	height:80px;
 	z-index:7;
 	background-image:linear-gradient(#3b5d9e, #365592, #2e497d)
 	/* background:#365592; */
-
 }
-#img1{
-	/* fb-header-font */
+#fb-header-font{
 	font-family:verdana;
 	font-size: 36px;
 	font-weight: bold;
@@ -33,66 +29,46 @@ body{
 	left:150px;
 	top:25px;
 }
-#form1{
-	left:750px;
-	height:60px;
-	width:180px;
-	top:20px;
-	font-family:verdana;
-	font-size:12px;
-}
-#form2{
-	left:940px;
-	height:60px;
-	width:250px;
-	top:20px;
-	font-family:verdana;
-	font-size:12px;
-}
-/* .login-link{
-	right:60px;
+.button-header{
+	right:100px;
 	top:35px;
 	color:white;
+	font-size: 12px;
+	font-weight: 600;
+	padding: 2px 6px;
 	position:absolute;
 	z-index:20;
-	height:22px;
-	width:50px;
+	background-color: #365592;
+  border-radius: 2px;
+  border: 1px solid #29487d;
 	cursor:pointer;
-} */
+}
+.button-header:hover {
+  background-color: #4267b2;
+}
+
 .fb-body{
 	position:absolute;
-	top:90px;
+	top:80px;
 	width:100%;
 	height:100%;
-
-
 }
 .fb-body-login{
   position:absolute;
-  /* align-content: center; */
-	/* left:0px; */
-	top:90px;
+	top:80px;
 	width:100%;
 	height:645px;
-
-
 }
 .fb-body-posts{
   position:absolute;
-  /* align-content: center; */
-	/* left:0px; */
-	top:90px;
+	top:80px;
 	width:100%;
 	height:645px;
-
-
 }
-
 #homepage-background{
-	background-image: url('beaut-globe.jpg');
+	background: url(asset_path('beaut-globe.jpg'));
 	background-size: cover;
 }
-
 #tagline{
 	left:150px;
 	top:20px;
@@ -107,18 +83,6 @@ body{
 	font-size:30px;
 	color:white;
 	font-weight:bold;
-}
-#login-header{
-	font-family:verdana;
-	font-size:30px;
-	color:black;
-	font-weight:bold;
-}
-#img2{
-	top:130px;
-	left:178px;
-	width:537px;
-	height:195px;
 }
 #signup-tagline{
 	font-family:verdana;
@@ -135,18 +99,6 @@ body{
 	width:430px;
 	height:495px;
 }
-#namebox{
-	width:200px;
-	height:40px;
-	border-radius:5px 5px 5px 5px;
-	background:white;
-	padding:10px;
-	font-size:18px;
-	margin-top:8px;
-	border-width: 1px;
-	border-style:solid;
-	border-color: gray;
-}
 .signup-box{
 	width:408px;
 	border-radius:5px 5px 5px 5px;
@@ -158,29 +110,53 @@ body{
 	border-style:solid;
 	border-color: gray;
 }
-#r-b{
+#login-header{
+	font-family:verdana;
+	font-size:30px;
+	color:black;
+	font-weight:bold;
+}
+#signup-disclaimer{
+	font-family:verdana;
 	font-size:12px;
-	height:15px;
-	width:15px;
+	color:lightgray;
 }
-.button-login{
-	right:100px;
-	top:35px;
-	color:white;
-	font-size: 12px;
-	font-weight: 600;
-	padding: 2px 6px;
+#signup-form-footer{
+	font-family:verdana;
+	font-size:14px;
+	color:lightgray;
+}
+.fb-body-footer{
+	width:100%;
 	position:absolute;
-	z-index:20;
-	background-color: #365592;
-  border-radius: 2px;
-  border: 1px solid #29487d;
-	cursor:pointer;
+	left:0px;
+	height:80px;
+	background:white;
+	top:700px;
 }
-.button-login:hover {
-  background-color: #4267b2;
+#fb-body-footer-base{
+	width:900px;
+	top:15px;
+	left:200px;
+	color:blue;
+	height:60px;
+}
+
+#namebox{
+	// used by 'new posts' view
+	width:200px;
+	height:40px;
+	border-radius:5px 5px 5px 5px;
+	background:white;
+	padding:10px;
+	font-size:18px;
+	margin-top:8px;
+	border-width: 1px;
+	border-style:solid;
+	border-color: gray;
 }
 .button2{
+	// used by 'new posts' view
 	width:250px;
 	height:40px;
 	left:750px;
@@ -195,33 +171,4 @@ body{
 	border-color: #335027;
 	cursor:pointer;
 	outline:none;
-
-}
-#signup-disclaimer{
-	font-family:verdana;
-	font-size:12px;
-	color:lightgray;
-
-}
-#signup-form-footer{
-	font-family:verdana;
-	font-size:14px;
-	color:lightgray;
-
-}
-.fb-body-footer{
-	width:100%;
-	position:absolute;
-	left:0px;
-	height:80px;
-	background:white;
-	top:700px;
-
-}
-#fb-body-footer-base{
-	width:900px;
-	top:15px;
-	left:200px;
-	color:blue;
-	height:60px;
 }
